# bech32

./: Makefile  README.md  pyproject.toml  tests.py
bech32/: __init__.py  cli.py  decode.py  encode.py  exceptions.py  segwit_addr.py
tests/: segwit_addr.py  test_encode.py  test_segwit_addr.py  tests.py
